cmake_minimum_required(VERSION 3.16)
project(c_programming)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

add_executable(c_programming
        #c_04.cpp
        #c_05.cpp
        #c_06.cpp
        #main.cpp
        #c_09.cpp
        #c_10.cpp
        #c_11.cpp
        #c_13.cpp
        #Study/pointer.c
        test.cpp)